--- a/consumer-movie/src/main/resources/application.yaml
+++ b/consumer-movie/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${BONE_EUREKA_SERVER_URL:http://bone:123456@192.168.200.64:30081/eureka/}
+      defaultZone: ${EUREKA_SERVER_URL:http://bone:123456@localhost:8761/eureka/}
   instance:
     prefer-ip-address: true #优先使用IP地址进行注册
     leaseExpirationDurationInSeconds: 15 #Eureka Client间隔多久向Eureka Server发送心跳,告知Eureka Server自己还存活,默认90
