配置由配置中心读取

--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -25,9 +25,9 @@ spring:
       enabled: true
       name: ${spring.application.name},global
   rabbitmq:
-    addresses: 192.168.200.127:5672
-    username: admin
-    password: mysteel123
+    addresses: localhost:5672
+    username: guest
+    password: guest
 eureka:
   client:
     service-url:
