--- a/consumer-movie/src/main/resources/bootstrap.yml
+++ b/consumer-movie/src/main/resources/bootstrap.yml
@@ -6,5 +6,9 @@ spring:
       enabled: true
       uri: http://localhost:8762/
       profile: local
+  rabbitmq:
+    addresses: localhost:5672
+    username: guest
+    password: guest
   profiles:
     active: local
