--- a/provider-user/pom.xml
+++ b/provider-user/pom.xml
@@ -54,6 +54,11 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.spring.cloud.msc</groupId>
+      <artifactId>cloud-boot</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
