--- a/zuul-server/pom.xml
+++ b/zuul-server/pom.xml
@@ -50,5 +50,9 @@
       <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+    </dependency>
   </dependencies>
 </project>
