添加动态路由

--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -27,7 +27,7 @@ spring:
   rabbitmq:
     addresses: localhost:5672
     username: guest
-    password: guest
+    password: liuqi
 eureka:
   client:
     service-url:
