--- a/consumer-movie/src/main/resources/bootstrap.yml
+++ b/consumer-movie/src/main/resources/bootstrap.yml
@@ -8,11 +8,11 @@ spring:
 #        enabled: true
 #        service-id: "config-server"
       uri: http://localhost:8762/
-      profile: local
+      profile: ${env:local}
       name: ${spring.application.name},global
   rabbitmq:
     addresses: localhost:5672
     username: guest
     password: liuqi
   profiles:
-    active: local
+    active: ${env:local}
