--- a/zuul-server/pom.xml
+++ b/zuul-server/pom.xml
@@ -53,6 +53,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jdbc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-oauth2</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
