--- a/zuul-server/src/main/resources/bootstrap.yml
+++ b/zuul-server/src/main/resources/bootstrap.yml
@@ -50,17 +50,17 @@ hystrix:
         timeout:
           enabled: false
 #安全配置
-security:
-  oauth2:
-    client:
-      #令牌端点
-      access-token-uri: http://localhost:8764/uaa/oauth/token
-      user-authorization-uri: http://localhost:8764/uaa/oauth/authorize
-      #授权端点
-      client-id: oauth-server #OAuth2客户端ID
-      client-secret: secret #OAuth2客户端密钥
-    resource:
-      jwt:
-        #使用对称加密,默认使用HS256
-        key-value: springcloud123
+#security:
+#  oauth2:
+#    client:
+#      #令牌端点
+#      access-token-uri: http://localhost:8764/uaa/oauth/token
+#      user-authorization-uri: http://localhost:8764/uaa/oauth/authorize
+#      #授权端点
+#      client-id: oauth-server #OAuth2客户端ID
+#      client-secret: secret #OAuth2客户端密钥
+#    resource:
+#      jwt:
+#        #使用对称加密,默认使用HS256
+#        key-value: springcloud123
 
