--- a/cloud-boot/pom.xml
+++ b/cloud-boot/pom.xml
@@ -12,4 +12,10 @@
     <version>0.0.1</version>
     <name>cloud-boot</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
