--- a/oauth-server/pom.xml
+++ b/oauth-server/pom.xml
@@ -45,6 +45,11 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-oauth2</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.spring.cloud.msc</groupId>
+      <artifactId>cloud-boot</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
