--- a/zuul-server/src/main/resources/bootstrap.yml
+++ b/zuul-server/src/main/resources/bootstrap.yml
@@ -1,66 +1,76 @@
 spring:
-  application:
-    name: zuul-server
+  profiles:
+    active: default,${env:local}
   cloud:
     config:
+      # 快速失败
+      failFast: true
       enabled: true
-      uri: http://localhost:8762/
+      name: ${spring.application.name},global
       profile: ${env:local}
-  rabbitmq:
-    addresses: localhost:5672
-    username: guest
-    password: liuqi
-  profiles:
-    active: ${env:local}
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_spring_cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: liuqi
-
-zuul:
-  #默认关闭,开启重试
-  retryable: true
-  ribbon:
-    #默认懒加载,第一次请求会进行数据预热从而导致失败,故而开启饥饿加载
-    eager-load:
-      enabled: true
-
-ribbon:
+      retry:
+        # 最大重试次数
+        max-attempts: 5
+        initial-interval: 1000
+        max-interval: 3000
+        multiplier: 1.1
+---
+spring:
+  profiles: local
+  cloud:
+    config:
+      # 配置中心地址
+      uri: ${CONFIG_SERVER_URL:http://localhost:8881}
   eureka:
-    enabled: true
-  #连接超时
-  ConnectTimeout: 3000
-  #读超时
-  ReadTimeout: 60000
-  #同一个服务重试的次数(除去第一次)
-  MaxAutoRetries: 1
-  #重试下一个服务的最大数量(除去第一个服务)
-  MaxAutoRetriesNextServer: 1
-  #启用okhttp
-  http:
     client:
-      enabled: false
-  okhttp:
-    enabled: true
-hystrix:
-  command:
-    default:
-      execution:
-        timeout:
-          enabled: false
-#安全配置
-#security:
-#  oauth2:
-#    client:
-#      #令牌端点
-#      access-token-uri: http://localhost:8764/uaa/oauth/token
-#      user-authorization-uri: http://localhost:8764/uaa/oauth/authorize
-#      #授权端点
-#      client-id: oauth-server #OAuth2客户端ID
-#      client-secret: secret #OAuth2客户端密钥
-#    resource:
-#      jwt:
-#        #使用对称加密,默认使用HS256
-#        key-value: springcloud123
-
+      serviceUrl:
+        # 默认注册中心地址
+        defaultZone: ${EUREKA_SERVER_URL:http://${SECURITY_USERNAME:bone}:${SECURITY_PASSWORD:123456}@localhost:8671/eureka/}
+---
+spring:
+  profiles: dev
+  cloud:
+    config:
+      # 配置中心地址
+      uri: ${CONFIG_SERVER_URL:http://localhost:8882}
+  eureka:
+    client:
+      serviceUrl:
+        # 默认注册中心地址
+        defaultZone: ${EUREKA_SERVER_URL:http://${SECURITY_USERNAME:bone}:${SECURITY_PASSWORD:123456}@localhost:8672/eureka/}
+---
+spring:
+  profiles: test
+  cloud:
+    config:
+      # 配置中心地址
+      uri: ${CONFIG_SERVER_URL:http://localhost:8883}
+  eureka:
+    client:
+      serviceUrl:
+        # 默认注册中心地址
+        defaultZone: ${EUREKA_SERVER_URL:http://${SECURITY_USERNAME:bone}:${SECURITY_PASSWORD:123456}@localhost:8673/eureka/}
+---
+spring:
+  profiles: pre
+  cloud:
+    config:
+      # 配置中心地址
+      uri: ${CONFIG_SERVER_URL:http://localhost:8884}
+  eureka:
+    client:
+      serviceUrl:
+        # 默认注册中心地址
+        defaultZone: ${EUREKA_SERVER_URL:http://${SECURITY_USERNAME:bone}:${SECURITY_PASSWORD:123456}@localhost:8674/eureka/}
+---
+spring:
+  profiles: prod
+  cloud:
+    config:
+      # 配置中心地址
+      uri: ${CONFIG_SERVER_URL:http://localhost:8885}
+eureka:
+  client:
+    serviceUrl:
+      # 默认注册中心地址
+      defaultZone: ${EUREKA_SERVER_URL:http://${SECURITY_USERNAME:bone}:${SECURITY_PASSWORD:123456}@localhost:8675/eureka/}
