更新配置项

--- a/provider-user/pom.xml
+++ b/provider-user/pom.xml
@@ -59,6 +59,11 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.shardingsphere</groupId>
+      <artifactId>sharding-jdbc-core</artifactId>
+      <version>3.0.0</version>
+    </dependency>
 
     <dependency>
       <groupId>com.spring.cloud.msc</groupId>
