--- a/cloud-boot/pom.xml
+++ b/cloud-boot/pom.xml
@@ -43,5 +43,11 @@
             <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
     </dependencies>
 </project>
