--- a/oauth-server/pom.xml
+++ b/oauth-server/pom.xml
@@ -41,10 +41,10 @@
       <artifactId>spring-cloud-starter-bus-amqp</artifactId>
     </dependency>
 
-    <!--<dependency>
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-security</artifactId>
-    </dependency>-->
+    </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-oauth2</artifactId>
